further color and nav styling issues (z-index)

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -1,5 +1,6 @@
 body, html {
   height: 100%;
+  background-color: #f7f7f7;
 }
 
 #wrap {
@@ -18,11 +19,17 @@ body, html {
 
 .main-section {
   height: 100%;
+  padding-top: 20px;
   padding-bottom: 60px;
 }
 
 .alert-box {
   text-align: center;
+  margin-bottom: 0 !important;
+}
+
+.reveal-modal {
+  z-index: 200;
 }
 
 .footer {
@@ -30,7 +37,7 @@ body, html {
   height: 45px;
   clear: both;
   position: relative;
-  background-color: #F3FFE2;
+  background-color: white;
   color: #225378;
   margin-top: -45px;
   .footer-content {
