--- a/app/assets/stylesheets/landing_page.css.scss
+++ b/app/assets/stylesheets/landing_page.css.scss
@@ -5,6 +5,7 @@
   background-size: cover;
   background-image: url("https://s3-us-west-2.amazonaws.com/timeauction/nicaragua_volunteering.jpg");
   position: relative;
+  margin-top: -20px;
 }
 
 .landing-banner-title {
