--- a/app/assets/stylesheets/nav.css.scss
+++ b/app/assets/stylesheets/nav.css.scss
@@ -23,6 +23,10 @@ nav.tab-bar {
   }
 }
 
+#user-account {
+  z-index: 150;
+}
+
 .mobile-user-account-holder {
   cursor: pointer;
 }
@@ -71,4 +75,9 @@ nav.tab-bar h1 {
   a {
     margin-right: 15px;
   }
+}
+
+.no-profile-image {
+  width: 40px;
+  height: 40px;
 }
